src/index.css
/* ... */
.meatseafood-table th {
  font-weight: 600;
}

.meatseafood-table tbody tr:nth-child(even) {
  background-color: var(--neutral-5);
}

.meatseafood-table tbody tr:hover {
  background-color: var(--primary-5);
}

.meatseafood-table img {
  width: 250px;
  height: auto;
  border-radius: 5px;
}

.meatseafood-button {
  display: inline-block;
  padding: 10px 15px;
  font-size: 11px;
  font-weight: 600;
  color: white;
  background-color: var(--primary-2);
  border: none;
  border-radius: 10px;
  transition: background-color 200ms;
}

.meatseafood-button:hover {
  background-color: var(--primary-3);
}

.meatseafood-availability {
  font-weight: bold;
  align-content: center;
  color: var(--neutral-1);
}

.meatseafood-availability.High {
  color: green;
}

.meatseafood-availability.Medium {
  color: orange;
}

.meatseafood-availability.Low {
  color: red;
}

.meatseafood-availability.out-of-stock {
  color: var(--accent-1);
}

/* Products */
.products-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 25px;
}

.product {
  background-color: white;
  padding: 15px 20px;
  border-radius: 25px;
  display: grid;
  grid-template-columns: auto 1fr auto;
}

.product-info {
  padding-left: 25px;
}

.product-checkout {
  display: grid;
  grid-template-rows: 1fr auto;
  justify-items: end;
}

.product-delete {
  background-color: white;
  padding: 5px 10px;
  color: var(--accent-1);
  border-color: var(--accent-2);
  font-size: 14px;
}

.product-image-container {
  position: relative;
}

.product-quantity-container {
  position: absolute;
  top: 8px;
  right: -15px;
  background-color: white;
  border-radius: 50%;
  padding: 5px;
}

.product-quantity {
  background-color: var(--primary-1);
  color: white;
  border-radius: 50%;
  font-size: 14px;
  width: 23px;
  height: 23px;
  display: grid;
  place-items: center;
}

.product-image {
  background-color: var(--neutral-5);
  padding: 10px;
  border-radius: 20px;
  transition: transform 180ms ease-out;
}
.product:nth-child(2n):hover .product-image {
  transform: scale(1.01) rotateZ(2deg);
}
.product:nth-child(2n + 1):hover .product-image {
  transform: scale(1.01) rotateZ(-2deg);
}

.product h3,
.product p {
  margin: 0;
}

/* product details page */
.product-details-image {
  background-color: white;
  padding: 10px;
  border-radius: 20px;
}

.table {
  width: 100%;
  border-collapse: collapse;
}

.table thead {
  background-color: var(--primary-1);
  color: white;
  border: 1px solid white;
  border-top: 0;
}
.table.table-cart thead {
  background-color: var(--accent-1);
}

.table th {
  padding: 15px;
}
.table td {
  padding: 10px;
}

.table tbody {
  font-size: 18px;
  border: 1px solid white;
}

.table-cart {
  text-align: center;
}

.table-cart tbody td:first-child {
  display: flex;
  align-items: center;
  gap: 15px;
  padding-left: 20px;
}

.table-nutrition tbody td:last-child {
  text-align: center;
}

.table tbody tr:nth-child(2n) {
  background-color: white;
}

.table tbody tr:nth-child(2n + 1) {
  background-color: var(--neutral-5);
}

.th-product {
  text-align: left;
  padding-left: 25px;
}

.cart-highlight {
  background-color: var(--accent-1);
  color: white;
}

.pay-form {
  padding-top: 30px;
}

@media (max-width: 700px) {
  .container {
    max-width: 700px;
    margin: 0;
    padding: 0;
  }
  body {
    padding: 0;
    margin: 0;
    width: 100%;
    overflow-x: hidden;
  }
  .home-layout {
    grid-template-columns: 1fr;
    grid-gap: 0;
    padding-top: 35px;
    text-align: center;
  }
  .home-layout h1 {
    margin: 0.2rem auto;
    padding: 15px 15px 10px 15px;
    font-size: 1.6rem;
    text-align: center;
  }
  .home-layout p {
    margin: 0 auto;
    padding: 1px 20px 1px 20px;
    font-size: 1.2rem;
    text-align: center;
    line-height: normal;
  }
  .home-layout a:first-of-type {
    border-radius: 4px;
    cursor: pointer;
    font-size: 1.2rem;
    font-weight: 600;
    padding: 0.4rem 0.8rem;
    border: 0;
    margin: 1.1rem 0 0 0;
    transition:
      background-color 200ms,
      color 200ms;
  }
  .profile-iconM img {
    width: 20%;
    height: auto;
    position: relative;
    z-index: 1;
  }
  .profile-iconM p {
    margin: 0;
    padding: 0;
    font-size: 0.75rem;
  }
  .home-image {
    order: -1;
    height: auto;
    width: 86%;
    justify-self: center;
  }
  .rounded {
    border-radius: 15px;
  }
  .about-layout,
  .products-grid,
  .product-details-layout {
    grid-template-columns: 1fr;
  }
  .containerMedia {
    width: 100%;
    max-width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
  }
  .navbar {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin: 0;
  }
  .navbar ul {
    list-style-type: none;
    overflow: hidden;
    text-align: center;
    padding: 0;
  }
  .navbar a {
    margin: 0;
    padding: 0.25rem 1rem;
    width: auto;
    text-align: center;
  }
  .nav-brand {
    font-size: 1.5rem;
    padding: 0;
    line-height: 1;
  }
  .navbarMedia {
    display: flex;
    flex-direction: column;
    align-self: center;
    padding: 0;
    margin: 0;
  }
  .nav-item {
    font-size: 1rem;
    margin: 0;
    padding: 0;
  }
  .nav-cart {
    margin-top: 2rem;
    font-size: 1.1rem;
    padding: 0.25rem 1rem;
  }
  .btn {
    border-radius: 3px;
    cursor: pointer;
    font-size: 1rem;
    font-weight: 600;
    padding: 1rem;
    border: 0;
    margin: 2rem 0 0 0;
    transition:
      background-color 200ms,
      color 200ms;
  }
  .containerMedia li:last-of-type {
    margin-top: 0.25rem;
  }
}

/* Loader */
.spinner {
  animation: rotator 1.4s linear infinite;
}

@keyframes rotator {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(270deg);
  }
}
/* ... */

